fix: 어드민 메뉴 구조 정리

--- a/src/components/layout/nav/nav.module.css
+++ b/src/components/layout/nav/nav.module.css
@@ -2,10 +2,10 @@
   @apply flex items-center gap-2 rounded-lg text-gray-700 hover:text-gray-700 hover:bg-gray-200 transition-all duration-300;
 }
 
-.menu>li {
-  @apply text-lg mb-1;
+.menu > li {
+  @apply text-lg mb-2 font-medium;
 }
-.menu>li>a {
+.menu > li > a {
   @apply px-3 py-2;
 }
 .menu a:global(.active) {
@@ -20,14 +20,14 @@
   @apply block;
 }
 
-.menu>li>ul {
-  @apply mt-1;
+.menu > li > ul {
+  @apply mt-1 font-normal;
 }
 
-.menu>li>ul>li {
+.menu > li > ul > li {
   @apply mb-1;
 }
 
-.menu>li>ul>li>a {
+.menu > li > ul > li > a {
   @apply pl-9 py-1 pr-3 text-base;
 }
