--- a/src/components/shared/spinner.module.css
+++ b/src/components/shared/spinner.module.css
@@ -1,6 +1,13 @@
 .spinner {
   position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(1px);
+  z-index: 9999;
 }
